# autokeras_tabular

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py
autokeras_tabular/examples/task_modules/tabular/: tabular_classification_binary.py  tabular_classification_multiclass.py  tabular_regression.py
autokeras_tabular/tabular/: tabular_preprocessor.py  tabular_supervised.py
tests/tabular/: test_tabular_preprocessor.py  test_tabular_supervised.py
